UPDATE : Challenge Interaction 관련 코드 1차(?) Rework 완료 - 추후 TODO 코드 수정 예정