@@ -5,6 +5,7 @@ import daehee.challengehub.challenge.interaction.entity.Review;
 import daehee.challengehub.challenge.interaction.model.ChatMessageDto;
 import daehee.challengehub.challenge.interaction.model.ReviewDto;
 import daehee.challengehub.challenge.interaction.service.InteractionService;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -14,16 +15,17 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/challenges")
 public class InteractionController {
     private final InteractionService interactionService;
+    private final ModelMapper modelMapper;
 
     @Autowired
-    public InteractionController(InteractionService interactionService) {
+    public InteractionController(InteractionService interactionService, ModelMapper modelMapper) {
         this.interactionService = interactionService;
+        this.modelMapper = modelMapper;
     }
 
     // 챌린지 채팅방의 메시지를 전송하는 API
@@ -35,12 +37,13 @@ public class InteractionController {
 
     // 특정 챌린지의 채팅방 내용을 조회하는 API
     // TODO: 모든 거 전체 다 가져오는 것은 당연히 문제가 생길 것이다. 이것에 대해서 공부 해야한다.
+    // 특정 챌린지의 채팅방 내용을 조회하는 API
     @GetMapping("/{id}/chat")
     public List<ChatMessageDto> getChatMessages(@PathVariable String id) {
         List<ChatMessage> chatMessages = interactionService.getChatMessages(id);
         return chatMessages.stream()
-                .map(this::convertToChatMessageDto)
-                .collect(Collectors.toList());
+                .map(message -> modelMapper.map(message, ChatMessageDto.class))
+                .toList();
     }
 
     // 챌린지에 후기 및 별점을 작성하는 API
@@ -56,7 +59,7 @@ public class InteractionController {
     public List<ReviewDto> getReviews(@PathVariable String id) {
         List<Review> reviews = interactionService.getReviews(id);
         return reviews.stream()
-                .map(this::convertToReviewDto)
-                .collect(Collectors.toList());
+                .map(review -> modelMapper.map(review, ReviewDto.class))
+                .toList();
     }
 }
